welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: ')' expected but ';' found.
def haut(c1 : Color;c2: Color) {faireFleur(c1);avance();avance();faireFleur(c2);for(i <- 1 to 6) {recule}}
                   ^FlowerPot:6: error: ';' expected but ')' found.
def haut(c1 : Color;c2: Color) {faireFleur(c1);avance();avance();faireFleur(c2);for(i <- 1 to 6) {recule}}
                             ^